examples/bad/missing_return.mko
fn must_return() -> int {
    print("forgot")
}

fn main() {
    print_int(must_return())
}
